editors/tree-sitter-bork/test/corpus/positional-variants.txt
==================
Positional payloads and explicit owner patterns
==================
type Reply[T] = sealed { Found(T, String), One((T, String)), Missing }
fn read(x: Reply[Int]): Int {
  match (x) {
    .Found(n, _) => n
    Reply[Int].One((n, _)) => n
    Reply[Int].Missing => 0
  }
}
fn test(x: Reply[Int]): Bool { x is Reply[Int].Found(Int, String) }

---

(source_file
  (type_declaration
    (identifier)
    (type_parameters
      (identifier))
    (variant
      (identifier)
      (type
        (qualified_name
          (identifier)))
      (type
        (qualified_name
          (identifier))))
    (variant
      (identifier)
      (type
        (tuple_type
          (type
            (qualified_name
              (identifier)))
          (type
            (qualified_name
              (identifier))))))
    (variant
      (identifier)))
  (function_declaration
    (identifier)
    (parameters
      (parameter
        (identifier)
        (type
          (qualified_name
            (identifier))
          (type_arguments
            (type
              (qualified_name
                (identifier)))))))
    (type
      (qualified_name
        (identifier)))
    (block
      (match_expression
        (parenthesized_expression
          (qualified_name
            (identifier)))
        (match_arm
          (pattern
            (context_pattern
              (identifier))
            (pattern
              (qualified_name
                (identifier)))
            (pattern))
          (qualified_name
            (identifier)))
        (match_arm
          (pattern
            (specialized_variant_pattern
              (qualified_name
                (identifier))
              (type_arguments
                (type
                  (qualified_name
                    (identifier))))
              (identifier))
            (pattern
              (tuple_pattern
                (pattern
                  (qualified_name
                    (identifier)))
                (pattern))))
          (qualified_name
            (identifier)))
        (match_arm
          (pattern
            (specialized_variant_pattern
              (qualified_name
                (identifier))
              (type_arguments
                (type
                  (qualified_name
                    (identifier))))
              (identifier)))
          (number)))))
  (function_declaration
    (identifier)
    (parameters
      (parameter
        (identifier)
        (type
          (qualified_name
            (identifier))
          (type_arguments
            (type
              (qualified_name
                (identifier)))))))
    (type
      (qualified_name
        (identifier)))
    (block
      (is_expression
        (qualified_name
          (identifier))
        (test_pattern
          (specialized_variant_pattern
            (qualified_name
              (identifier))
            (type_arguments
              (type
                (qualified_name
                  (identifier))))
            (identifier))
          (test_pattern
            (type
              (qualified_name
                (identifier))))
          (test_pattern
            (type
              (qualified_name
                (identifier)))))))))

==================
Newlines separate leading-dot list and payload patterns
==================
fn f() {
  match xs {
    [.Some(n)
     // Another pattern, not a selector.
     .None] => n
    .Pair(.Some(n)
          .None) => n
    [name
     .Some(n)] => n
    [1
     .None] => 0
  }
  if xs is [.Some(n)
            .None] { n }
  for { [.Some(n)
         .None] in rows } yield n
  for { .Pair([name
               .Some(n)]
              .None) in rows } yield n
}

---

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (block
      (match_expression
        (qualified_name
          (identifier))
        (match_arm
          (pattern
            (pattern
              (context_pattern
                (identifier))
              (pattern
                (qualified_name
                  (identifier))))
            (comment)
            (pattern
              (context_pattern
                (identifier))))
          (qualified_name
            (identifier)))
        (match_arm
          (pattern
            (context_pattern
              (identifier))
            (pattern
              (context_pattern
                (identifier))
              (pattern
                (qualified_name
                  (identifier))))
            (pattern
              (context_pattern
                (identifier))))
          (qualified_name
            (identifier)))
        (match_arm
          (pattern
            (pattern
              (qualified_name
                (identifier)))
            (pattern
              (context_pattern
                (identifier))
              (pattern
                (qualified_name
                  (identifier)))))
          (qualified_name
            (identifier)))
        (match_arm
          (pattern
            (pattern
              (number))
            (pattern
              (context_pattern
                (identifier))))
          (number)))
      (if_expression
        (is_expression
          (qualified_name
            (identifier))
          (test_pattern
            (test_pattern
              (context_pattern
                (identifier))
              (test_pattern
                (type
                  (qualified_name
                    (identifier)))))
            (test_pattern
              (context_pattern
                (identifier)))))
        (block
          (qualified_name
            (identifier))))
      (comprehension_expression
        (comprehension_generator
          (pattern
            (pattern
              (context_pattern
                (identifier))
              (pattern
                (qualified_name
                  (identifier))))
            (pattern
              (context_pattern
                (identifier))))
          (qualified_name
            (identifier)))
        (qualified_name
          (identifier)))
      (comprehension_expression
        (comprehension_generator
          (pattern
            (context_pattern
              (identifier))
            (pattern
              (pattern
                (qualified_name
                  (identifier)))
              (pattern
                (context_pattern
                  (identifier))
                (pattern
                  (qualified_name
                    (identifier)))))
            (pattern
              (context_pattern
                (identifier))))
          (qualified_name
            (identifier)))
        (qualified_name
          (identifier))))))

==================
Expression lists and constructor arguments keep leading-dot chains
==================
fn f() {
  values = [" x "
    .trim()]
  call(" c " /* comment
    ends */ .trim())
  call(" d " /* comment
    ends */)
  call(" y "
    .trim())
  value = Pair.Some(" z "
    .trim())
  for {
    [values
      .map(v => v)]
    break
  }
  match xs {
    [n: Int where accepts(" x "
      .trim())
     .None] => n
  }
}

---

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (block
      (binding
        (identifier)
        (list_literal
          (call_expression
            (selector_expression
              (string)
              (identifier)))))
      (call_expression
        (qualified_name
          (identifier))
        (argument
          (call_expression
            (selector_expression
              (string)
              (comment)
              (identifier)))))
      (call_expression
        (qualified_name
          (identifier))
        (argument
          (string))
        (comment))
      (call_expression
        (qualified_name
          (identifier))
        (argument
          (call_expression
            (selector_expression
              (string)
              (identifier)))))
      (binding
        (identifier)
        (call_expression
          (selector_expression
            (qualified_name
              (identifier))
            (identifier))
          (argument
            (call_expression
              (selector_expression
                (string)
                (identifier))))))
      (for_expression
        (block
          (list_literal
            (call_expression
              (selector_expression
                (qualified_name
                  (identifier))
                (identifier))
              (argument
                (lambda_expression
                  (identifier)
                  (qualified_name
                    (identifier))))))
          (bare_break)))
      (match_expression
        (qualified_name
          (identifier))
        (match_arm
          (pattern
            (pattern
              (identifier)
              (type
                (qualified_name
                  (identifier))
                (where_clause
                  (requirement
                    (requirement
                      (qualified_name
                        (identifier)))
                    (call_expression
                      (selector_expression
                        (string)
                        (identifier)))))))
            (pattern
              (context_pattern
                (identifier))))
          (qualified_name
            (identifier)))))))
